--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -16,8 +16,8 @@
         state: "{{state}}"
       register: vpcout
 
-    - debug:
-        var: vpcout
+    # - debug:
+    #     var: vpcout
 
     - name: create public Subnet 1 in Zone1
       ec2_vpc_subnet:
@@ -30,6 +30,31 @@
         resource_tags:
           Name: vprofile-pubsub1
       register: pubsub1_out
+
+    - name: create public Subnet 2 in Zone2
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone2}}"
+        state: "{{state}}"
+        cidr: "{{PubSub2Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub2
+      register: pubsub2_out
+
+    - name: create public Subnet 3 in Zone3
+      ec2_vpc_subnet:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        az: "{{zone3}}"
+        state: "{{state}}"
+        cidr: "{{PubSub3Cidr}}"
+        map_public: yes
+        resource_tags:
+          Name: vprofile-pubsub3
+      register: pubsub3_out
+
     
-    - debug:
-        var: pubsub1_out
+    # - debug:
+    #     var: pubsub1_out
