--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -27,7 +27,7 @@
         state: "{{state}}"
         cidr: "{{PubSub1Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-pubsub1
       register: pubsub1_out
     
@@ -39,7 +39,7 @@
         state: "{{state}}"
         cidr: "{{PrivSub1Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-privsub1
       register: privsub1_out
 
@@ -52,7 +52,7 @@
         state: "{{state}}"
         cidr: "{{PubSub2Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-pubsub2
       register: pubsub2_out
 
@@ -64,7 +64,7 @@
         state: "{{state}}"
         cidr: "{{PrivSub2Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-privsub2
       register: privsub2_out
 
@@ -76,7 +76,7 @@
         state: "{{state}}"
         cidr: "{{PubSub3Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-pubsub3
       register: pubsub3_out
     
@@ -88,10 +88,18 @@
         state: "{{state}}"
         cidr: "{{PrivSub3Cidr}}"
         map_public: yes
-        resource_tags:
+        tags:
           Name: vprofile-privsub3
       register: privsub3_out
     
+    - name: Internet Gateway Setup
+      ec2_vpc_igw:
+        vpc_id: "{{vpcout.vpc.id}}"
+        region: "{{region}}"
+        state: "{{state}}"
+        tags:
+          Name: vprofile_IGW
+      register: igw_out
 
     
     # - debug:
