--- a/vpc-setup.yml
+++ b/vpc-setup.yml
@@ -16,9 +16,6 @@
         state: "{{state}}"
       register: vpcout
 
-    # - debug:
-    #     var: vpcout
-
     - name: create public Subnet 1 in Zone1
       ec2_vpc_subnet:
         vpc_id: "{{vpcout.vpc.id}}"
@@ -141,5 +138,17 @@
       register: privRT_out
 
     
-    # - debug:
-    #     var: pubsub1_out
+    - debug:
+        var: "{{item}}"
+      loop:
+        - vpcout.vpc.id
+        - pubsub1_out.subnet.id
+        - pubsub2_out.subnet.id
+        - pubsub3_out.subnet.id
+        - privsub1_out.subnet.id
+        - privsub2_out.subnet.id
+        - privsub3_out.subnet.id
+        - igw_out.gateway_id
+        - pubRT_out.route_table.id
+        - NATGW_out.nat_gateway_id
+        - privRT_out.route_table.id
