--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -36,7 +36,7 @@
             cidr_ip: "{{MYIP}}"
       register: BastionSG_out
 
-    - name: Creating Bastoin host
+    - name: Creating Bastion host
       ec2:
         key_name: vprofile-key
         region: "{{region}}"
