--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -52,5 +52,5 @@
           - proto: tcp
             from_port: 22
             to_port: 22
-            group_id:"{{}}"
+            group_id:"{{bastionSGid}}"
       register: vproELBSG_out
