--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -52,5 +52,16 @@
           - proto: tcp
             from_port: 22
             to_port: 22
-            group_id:"{{bastionSGid}}"
-      register: vproELBSG_out
+            group_id: "{{bastionSGid}}"
+      register: vproStackSG_out
+
+    - name: Update Security Group with its own sg id
+      ec2_group:
+        name: vproStack-sg
+        description: Updating ports within sg
+        region: "{{region}}"
+        vpc_id: "{{vpcid}}"
+        purge_rules: no
+        rules:
+          - proto: all
+            group_id: "{{vproStackSG_out.group_id}}"
