--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -172,7 +172,7 @@
       register: db01_out
 
     - debug:
-        var: db01_out.instances[0].
+        var: db01_out.instances[0].id
         
     - local_action:
         module: ec2_elb_lb
