--- a/vpro-ec2-stack.yml
+++ b/vpro-ec2-stack.yml
@@ -176,6 +176,7 @@
         
     - local_action:
         module: ec2_elb_lb
+        name: "vprofile-elb"
         region: "{{region}}"
         state: present
         instance_ids:
