--- a/bastion-instance.yml
+++ b/bastion-instance.yml
@@ -63,3 +63,11 @@
         path: vars/vpc_output_vars
         regexp: '^BastionSGid:'
         line: "BastionSGid: {{BastionSG_out.group_id}}"
+    
+    # Or you can use
+    # - name: Insert/Update "BastionSGid" in vars/vpc-output_vars
+    #   blockinfile:
+    #     path: vars/vpc-output_vars
+    #     backup: yes
+    #     block: |
+    #       BastionSGid: {{BastionSG_out.group_id}}
