--- a/provision-stack/ansible.cfg
+++ b/provision-stack/ansible.cfg
@@ -8,7 +8,7 @@ timeout = 15
 
 [privilege_escalation]
 become = yes
-become_method = yes
+become_method = sudo
 become_user = root
 become_pass = False
 
