--- a/provision-stack/build.yml
+++ b/provision-stack/build.yml
@@ -7,7 +7,7 @@
     - name: Install jdk, maven, git
       apt:
         name: "{{item}}"
-        state: absent
+        state: present
         update_cache: yes
       loop:
         - git
